--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>website name</title>
-    <link rel="stylesheet" href="/websitename/assets/stylesheets/style.css">
+    <title>WebCreator | Home</title>
+    <link rel="stylesheet" href="/WebCreator/assets/stylesheets/style.css">
 </head>
 <header class="primary-header conainer group">
     <h1 class="logo">
-        <a id="link_bar" href="/websitename/index.html">test <br> site</a>
+        <a id="link_bar" href="/WebCreator/index.html">test <br> site</a>
     </h1>
     <h3 class="tagline">this is where I test stuff</h3>
     <nav class="nav primary-nav">
       <ul>
-        <li><a href="/websitename/index.html">Home</a></li>
+        <li><a href="/WebCreator/index.html">Home</a></li>
       </ul>
     </nav>
 </header>
@@ -40,11 +40,11 @@
   </div>
 </section>
 <footer class="primary-footer container group">
-  <small>&copy; websitename</small>
+  <small>&copy; WebCreator</small>
   
   <nav class="nav">
     <ul>
-      <li><a href="/websitename/index.html">Home</a></li>
+      <li><a href="/WebCreator/index.html">Home</a></li>
     </ul>
   </nav>
   
