updated home page

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <header class="primary-header conainer group">
     <h1 class="logo">
-        <a id="link_bar" href="/WebCreator/index.html">test <br> site</a>
+        <a id="link_bar" href="/WebCreator/index.html">Web<br>Creator</a>
     </h1>
-    <h3 class="tagline">this is where I test stuff</h3>
+    <h3 class="tagline">your place for help with special web designs</h3>
     <nav class="nav primary-nav">
       <ul>
         <li><a href="/WebCreator/index.html">Home</a></li>
@@ -17,12 +17,13 @@
 </header>
 <section class="hero container">
   <h2>
-    making test examples of code
+    Showing you how to do examples of code
   </h2>
   <p>
-    Here i make hard bits of code for you to copy into your own websites,
-    you can start by looking at my exmaples below.
+    Here you can find how to make special web designs in html css and json
   </p>
+  <a class="btn btn-alt" href="/WebCreator/">browse special web designs</a>
+  <!--TODO add link to browse page-->
 </section>
 <section class="row row-alt">
   <div class="grid">
