--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>WebCreator | Home</title>
     <link rel="stylesheet" href="/WebCreator/assets/stylesheets/style.css">
+    <link rel="icon" href="/WebCreator/assetes/images/WebCreator_favicon.png">
 </head>
 <header class="primary-header conainer group">
     <h1 class="logo">
@@ -22,8 +23,7 @@
   <p>
     Here you can find how to make special web designs in html css and json
   </p>
-  <a class="btn btn-alt" href="/WebCreator/">browse special web designs</a>
-  <!--TODO add link to browse page-->
+  <a class="btn btn-alt" href="/WebCreator/browse.html">browse special web designs</a>
 </section>
 <section class="row row-alt">
   <div class="grid">
